[gd_scene load_steps=13 format=2]

[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonToggleStandard/PlayerGUI_ButtonToggleStandard.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundSpeedAndStartPanel/Assets/RoundSpeedAndStartPanel_Border.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundSpeedAndStartPanel/Assets/RoundSpeedAndStartPanel_BackgroundFill.png" type="Texture" id=3]
[ext_resource path="res://Fonts/chivo/chivo.regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundSpeedAndStartPanel/RoundSpeedAndStartPanel.gd" type="Script" id=5]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundSpeedAndStartPanel/Assets/RoundSpeedAndStartPanel_ArrowSlider_Border.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundSpeedAndStartPanel/Assets/RoundSpeedAndStartPanel_ArrowSlider_BackgroundFill.png" type="Texture" id=8]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundSpeedAndStartPanel/Assets/RoundSpeedAndStartPane_ArrowIndicator.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="RoundSpeedAndStartPanel" type="MarginContainer"]
margin_right = 114.0
margin_bottom = 80.0
rect_min_size = Vector2( 114, 80 )
mouse_filter = 2
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 114.0
margin_bottom = 80.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 2.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 112.0
margin_right = 114.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 114.0
margin_bottom = 2.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 78.0
margin_right = 114.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="ContentPanel" type="MarginContainer" parent="."]
margin_right = 114.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="ContentPanel"]
margin_right = 114.0
margin_bottom = 80.0
mouse_filter = 2

[node name="SpeedButton01" parent="ContentPanel/Control" instance=ExtResource( 1 )]
margin_left = 6.0
margin_top = 5.0
margin_right = 36.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
custom_font = SubResource( 1 )
custom_color = Color( 0, 1, 0.321569, 1 )
is_toggle_on_by_hover_instead_of_click = false
can_be_untoggled_if_is_toggled = true

[node name="SpeedButton02" parent="ContentPanel/Control" instance=ExtResource( 1 )]
margin_left = 42.0
margin_top = 5.0
margin_right = 72.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
custom_font = SubResource( 1 )
custom_color = Color( 0.992157, 1, 0, 1 )
is_toggle_on_by_hover_instead_of_click = false
can_be_untoggled_if_is_toggled = true

[node name="SpeedButton03" parent="ContentPanel/Control" instance=ExtResource( 1 )]
margin_left = 78.0
margin_top = 5.0
margin_right = 108.0
margin_bottom = 35.0001
rect_min_size = Vector2( 30, 30 )
custom_font = SubResource( 1 )
custom_color = Color( 1, 0.494118, 0, 1 )
is_toggle_on_by_hover_instead_of_click = false
can_be_untoggled_if_is_toggled = true

[node name="MarginContainer" type="MarginContainer" parent="ContentPanel/Control"]
margin_left = 4.0
margin_top = 37.0
margin_right = 110.0
margin_bottom = 43.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="ContentPanel/Control/MarginContainer"]
margin_right = 106.0
margin_bottom = 6.0
mouse_filter = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="ContentPanel/Control/MarginContainer"]
margin_right = 1.0
margin_bottom = 6.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 7 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="ContentPanel/Control/MarginContainer"]
margin_left = 105.0
margin_right = 106.0
margin_bottom = 6.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 7 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="ContentPanel/Control/MarginContainer"]
margin_right = 106.0
margin_bottom = 1.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 7 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="ContentPanel/Control/MarginContainer"]
margin_top = 5.0
margin_right = 106.0
margin_bottom = 6.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 7 )
stretch_mode = 2

[node name="ArrowPic" type="TextureRect" parent="ContentPanel/Control"]
margin_left = 15.0
margin_top = 29.0
margin_right = 27.0
margin_bottom = 41.0
mouse_filter = 2
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 114.0
margin_bottom = 80.0
mouse_filter = 2

[node name="StatusLabel" type="Label" parent="Control"]
margin_left = 27.0
margin_top = 50.0
margin_right = 87.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ongoing"

[node name="ReadyButton" parent="Control" instance=ExtResource( 6 )]
margin_left = 3.0
margin_top = 44.0
margin_right = 111.0
margin_bottom = 77.0
text_for_label = "Ready"
custom_font = SubResource( 3 )
custom_color = Color( 0.992157, 1, 0, 1 )

[node name="StatsButton" parent="." instance=ExtResource( 6 )]
visible = false
margin_right = 114.0
margin_bottom = 80.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3
text_for_label = "View Stats"
custom_color = Color( 0.992157, 1, 0, 1 )

[connection signal="on_button_released_with_button_left" from="ContentPanel/Control/SpeedButton01" to="." method="_on_SpeedButton01_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="ContentPanel/Control/SpeedButton02" to="." method="_on_SpeedButton02_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="ContentPanel/Control/SpeedButton03" to="." method="_on_SpeedButton03_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="Control/ReadyButton" to="." method="_on_ReadyButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="StatsButton" to="." method="_on_StatsButton_on_button_released_with_button_left"]
